[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "social-media-agent"
version = "2.4.1"
description = "Orchestrated, provider-agnostic AI agent that researches, writes, and publishes content across any social platform."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Abdallah Mohamed" }]
keywords = ["ai-agent", "social-media", "automation", "claude", "openai", "ollama", "openclaw"]
dependencies = [
    "requests>=2.31.0",
    "requests-oauthlib>=1.3.1",
    "PyYAML>=6.0",
    "Pillow>=11.0.0",
    "matplotlib>=3.7.0",
    "playwright>=1.40.0",
]

[project.optional-dependencies]
# Optional: programmatic registration into an OpenClaw agent.
openclaw = ["openclaw-sdk>=2026.3"]
# Development / test tooling.
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[project.scripts]
smkit = "agent.cli:main"
pitch-agent = "pitch_agent.cli:main"

[tool.setuptools]
packages = ["agent", "pitch_agent", "pitch_agent.providers"]

[tool.setuptools.package-data]
pitch_agent = ["data/*.csv", "templates/*.html"]
